doc: change the name & description
It won't let me update the marketplace action otherwise.

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: Dependabolt
-description: Make sure all packages in a bolt-managed monorepo are updated via Dependabot
+name: Dependa-bolt
+description: Make sure all packages in a bolt-managed monorepo are updated via Dependabot (not affiliated with Dependabot or bolt)
 branding:
   icon: package
   color: gray-dark
