fix: properly pass in inputs/secrets to script (#10)
* chore: rename shell script

--- a/action.yml
+++ b/action.yml
@@ -20,4 +20,11 @@ runs:
   steps:
     - name: Run Dependabolt
       shell: bash
-      run: $GITHUB_ACTION_PATH/entrypoint.sh
+      run: $GITHUB_ACTION_PATH/dependabolt.sh
+      env:
+        DEPENDABOLT_DEBUG: ${{ env.DEPENDABOLT_DEBUG }}
+        DEPENDABOLT_SSH_DEPLOY_KEY: ${{ env.DEPENDABOLT_SSH_DEPLOY_KEY }}
+        GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
+        GIT_COMMIT_EMAIL: ${{ inputs.gitCommitEmail }}
+        GIT_COMMIT_FLAGS: ${{ inputs.gitCommitFlags }}
+        GIT_COMMIT_USER: ${{ inputs.gitCommitUser }}
